--- a/opticks.css
+++ b/opticks.css
@@ -13,6 +13,6 @@ body, HTML { background: /*url("images/chyeah.png")*/ #121212 repeat-x }
 #list { list-style:none; text-align:center; line-height:20px; }
 #list li { text-align:center; }
 #contact { z-index:1001; position:absolute; bottom:20px; left:50%; margin:0 0 0 -306px; width:612px; }
-#contact li { color:#fff; font-size:16pt; }
+#contact li { color:#fff; font-size:16pt; line-height: 18pt; }
 #contact a { color:#f3c; }
 #contact a:hover { text-decoration:none; }
