--- a/opticks.css
+++ b/opticks.css
@@ -10,4 +10,4 @@ li { margin: 0; }
 #contact li { font-size:16pt; line-height: 18pt; }
 #contact a { color:#f3c; }
 #contact a:hover { text-decoration:none; }
-.fb-like { position: absolute; left: 10px; bottom: 10px; }
+.fb-like { margin: 0; }
