--- a/opticks.css
+++ b/opticks.css
@@ -1,12 +1,12 @@
-* { margin:25px; padding:0; }
-body, HTML { background: #121212 repeat-x; text-align:center; color: #fff; }
-ul { list-style: none; }
-h1, h2 { font-family: sans-serif; font-size: 32pt; }
+* { padding:0; }
+body, HTML { margin:25px; background: #121212 repeat-x; text-align:center; color: #fff; }
+ul { margin:25px; list-style: none; }
+h1, h2 { margin:25px; font-family: sans-serif; font-size: 32pt; }
 h2 { font-size: 24pt; }
 li { margin: 0; }
-#corners img { height: 360px; width: 360px; }
+#corners img { margin:25px; height: 360px; width: 360px; }
 #corners ul { font-size: 18pt; }
-#list { line-height:20px; }
+#list { margin:25px; line-height:20px; }
 #contact li { font-size:16pt; line-height: 18pt; }
 #contact a { color:#f3c; }
 #contact a:hover { text-decoration:none; }
