--- a/opticks.css
+++ b/opticks.css
@@ -1,4 +1,4 @@
-* { padding:0; }
+* { margin:0; padding:0; }
 body, HTML { margin:25px; background: #121212 repeat-x; text-align:center; color: #fff; }
 ul { margin:25px; list-style: none; }
 h1, h2 { margin:25px; font-family: sans-serif; font-size: 32pt; }
