--- a/opticks.css
+++ b/opticks.css
@@ -4,10 +4,10 @@ ul { margin:25px; list-style: none; }
 h1, h2 { margin:25px; font-family: sans-serif; font-size: 32pt; }
 h2 { font-size: 24pt; }
 li { margin: 0; }
+a { color:#f3c; }
 #corners img { margin:25px; height: 360px; width: 360px; }
 #corners ul { font-size: 16pt; }
 #list { margin:25px; line-height:20px; }
 #contact li { font-size:16pt; line-height: 18pt; }
-#contact a { color:#f3c; }
 #contact a:hover { text-decoration:none; }
 #duck { margin: 0 auto; }
