--- a/opticks.css
+++ b/opticks.css
@@ -1,7 +1,7 @@
 * { margin:0; padding:0; }
 body, HTML { margin:25px; background: #121212 repeat-x; text-align:center; color: #fff; }
 ul { margin:25px; list-style: none; }
-h1, h2 { margin:25px; font-family: sans-serif; font-size: 32pt; }
+h1, h2 { margin:25px; font-family: sans-serif; font-size: 38pt; }
 h2 { font-size: 24pt; }
 li { margin: 0; }
 a { color:#f3c; }
@@ -10,4 +10,4 @@ a { color:#f3c; }
 #list { margin:25px; line-height:20px; }
 #contact li { font-size:16pt; line-height: 18pt; }
 #contact a:hover { text-decoration:none; }
-#duck { margin: 0 auto; }
+.bc { margin: 0 auto; }
