--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
 body, html { height: 100%; margin: 0; padding: 0; background: #efefef; color: #121212; }
 
 header { float: left; margin: 2.61803em; }
-@media (min-width: 1366px) { header { width: 14.10403%; float: left; margin-right: -100%; margin-left: 4.35839%; clear: none; } }
+@media (min-width: 810px) { header { width: 14.10403%; float: left; margin-right: -100%; margin-left: 4.35839%; clear: none; } }
 header ul { list-style: none; margin: 0; }
 header ul li { margin-left: 0.5em; font-size: 16pt; line-height: 24pt; }
 header ul a { color: #0687f5; text-decoration: none; }
@@ -30,9 +30,12 @@ header ul a:hover { text-decoration: underline; }
 header h1 { margin-bottom: 19pt; font-family: sans-serif; font-size: 38pt; }
 
 .bandcamp { float: left; margin: 2.61803em; }
+@media (min-width: 810px) { .bandcamp { width: 14.10403%; float: left; margin-right: -100%; margin-left: 4.35839%; clear: none; margin-top: 29.03444em; } }
+@media (min-width: 1160px) { .bandcamp { width: 14.10403%; clear: right; float: left; margin-left: 4.35839%; margin-right: 4.35839%; margin-top: 17.94427em; } }
 @media (min-width: 1366px) { .bandcamp { width: 22.82081%; float: left; margin-right: -100%; margin-left: 27.17919%; clear: none; margin-top: 0; margin-bottom: 0; } }
 
-.youtube { float: left; margin: 2.61803em; }
+.youtube { float: left; margin: 2.61803em; padding-bottom: 1.61803em; }
+@media (min-width: 810px) { .youtube { width: 22.82081%; float: left; margin-right: -100%; margin-left: 27.17919%; clear: none; margin-top: 6.8541em; } }
 @media (min-width: 1366px) { .youtube { width: 36.92484%; float: right; margin-left: 0; margin-right: 4.35839%; clear: none; margin-top: 6.8541em; } }
 
 .fb-like { margin-left: 0.5em; line-height: 24pt; }
