--- a/style.css
+++ b/style.css
@@ -39,3 +39,5 @@ header h1 { margin-bottom: 19pt; font-family: sans-serif; font-size: 38pt; }
 @media (min-width: 1366px) { .youtube { width: 36.92484%; float: right; margin-left: 0; margin-right: 4.35839%; clear: none; margin-top: 6.8541em; } }
 
 .fb-like { margin-left: 0.5em; line-height: 24pt; }
+
+.media { visibility: hidden; }
