--- a/style.css
+++ b/style.css
@@ -21,6 +21,8 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
 
 body, html { height: 100%; margin: 0; padding: 0; background: #efefef; color: #121212; }
 
+body { background: url('/img/logo.jpg') no-repeat right; }
+
 header { float: left; margin: 2.61803em; }
 @media (min-width: 810px) { header { width: 14.10403%; float: left; margin-right: -100%; margin-left: 4.35839%; clear: none; } }
 header ul { list-style: none; margin: 0; }
@@ -39,5 +41,3 @@ header h1 { margin-bottom: 19pt; font-family: sans-serif; font-size: 38pt; }
 @media (min-width: 1366px) { .youtube { width: 36.92484%; float: right; margin-left: 0; margin-right: 4.35839%; clear: none; margin-top: 6.8541em; } }
 
 .fb-like { margin-left: 0.5em; line-height: 24pt; }
-
-.media { visibility: hidden; }
